tests/ui/one_field_struct.rs
#[vecn::vector]
struct TupleStruct<T>(T);

#[vecn::vector]
struct NamedStruct<T> {
    x: T,
}

fn main() {}
